--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
 <div class="conteiner conteiner_catalog">
 	
 	<header class="top-menu">
-		<a class="top-menu__logo" href="#">
+		<a class="top-menu__logo" href="./index.html" target="_blank">
 		</a>
 		<button class="top-menu__button" href="#">
 			<img width="21" height="21" src="./static/images/mobile/svg/top-menu/menu.svg" alt="menu">
